Fixed Base64 so it doesn't require a sun library.